update knaken label to goSettle in multiple language files and database

--- a/dev/lang/php_de.json
+++ b/dev/lang/php_de.json
@@ -206,7 +206,7 @@
   "payment_methods.transfer": "Überweisen",
   "payment_methods.trustly": "Vertrauenswürdig",
   "payment_methods.wechatpay": "WeChatPay",
-  "payment_methods.knaken": "Knaken Settle",
+  "payment_methods.knaken": "goSettle",
   "verification_methods.idin": "iDIN",
   "dashboard.pages.payments.displayInCheckout": "Group Credit-debitcards",
   "dashboard.pages.payments.displayInCheckoutDesc": "Cards option on how to show the brands in the checkout. <br/> <b>Separate</b>: Card issuers are showed seperately in the checkout.</br><b>Grouped</b>: Card issuers are showed within one group."
