--- a/dev/lang/php_nl.json
+++ b/dev/lang/php_nl.json
@@ -202,7 +202,7 @@
   "payment_methods.transfer": "Transfer",
   "payment_methods.trustly": "Trustly",
   "payment_methods.wechatpay": "WeChatPay",
-  "payment_methods.knaken": "Knaken Settle",
+  "payment_methods.knaken": "goSettle",
   "verification_methods.idin": "iDIN",
   "dashboard.pages.payments.displayInCheckout": "Group Credit-debitcards",
   "dashboard.pages.payments.displayInCheckoutDesc": "Cards option on how to show the brands in the checkout. <br/> <b>Separate</b>: Card issuers are showed seperately in the checkout.</br><b>Grouped</b>: Card issuers are showed within one group."
